# anon-aadhaar-halo2

./: Cargo.toml  rust-toolchain
src/: chip.rs  conditional_secrets.rs  instructions.rs  lib.rs  signal.rs  timestamp.rs
src/big_uint/: chip.rs  instructions.rs  mod.rs  utils.rs
src/sha256/: compression.rs  mod.rs  spread.rs  utils.rs
