[package]
name = "anon-aadhaar-halo2"
version = "0.1.0"
edition = "2021"
authors = ["Hridam Basu"]
description = "RSA-SHA256 verification circuit in Halo2."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

halo2-base = { version = "0.4.1", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "a2a548b" }
halo2curves = "0.7.0"
halo2-ecc = { version = "0.4.1", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "a2a548b" }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"
plonk = "0.0.0"
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon.git", branch = "main" }
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde", "sha2"] }
sha2 = "0.10.6"
subtle = { version = "2.3", default-features = false }
itertools = "0.13.0"

[dev-dependencies]
criterion = "0.4"
rand_core = { version = "0.6", default-features = false }
paste = "1.0.7"
hex = "0.4.3"
